# cowork

./: .env.example  .gitignore  Dockerfile  QWEN.md  README.md  docker-compose.yml  example_bidirectional_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md  index.md  overview.md  troubleshooting.md
src/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
src/websocket_sse_server/: __init__.py  config.py  main.py
src/websocket_sse_server/api/: __init__.py  sse_endpoints.py  websocket_endpoints.py
src/websocket_sse_server/core/: __init__.py  connection_manager.py  message_router.py  sse_handler.py
src/websocket_sse_server/models/: __init__.py  message.py  sse_event.py
src/websocket_sse_server/utils/: __init__.py  exceptions.py  logger.py
tests/: README.md  conftest.py  test_api.sh  test_bidirectional_communication.py  test_integration.py  test_public_accounts.py
tests/integration/: README.md  test_sse_flow.py  test_websocket_flow.py  test_websocket_sse_integration.py
tests/unit/: test_connection_manager.py  test_sse_handler.py
