[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websocket-sse-server"
version = "1.0.0"
description = "WebSocket server with SSE endpoint support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andy", email = "andy@example.com"},
]
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "loguru==0.7.3",
    "python-multipart==0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "black==26.1.0",
    "flake8==7.3.0",
    "mypy==1.19.1",
]

[project.scripts]
websocket-sse-server = "websocket_sse_server.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
